<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/genderImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/icons8_gender_50"
        app:layout_constraintBottom_toBottomOf="@+id/genderText"
        app:layout_constraintEnd_toStartOf="@+id/genderText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/genderText" />

    <RadioGroup
        android:id="@+id/genderRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/genderText"
        app:layout_constraintStart_toEndOf="@+id/genderText"
        app:layout_constraintTop_toTopOf="@+id/genderText">

        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toStartOf="@+id/genderRadioButton"
        app:layout_constraintStart_toEndOf="@+id/genderImage"
        app:layout_constraintTop_toBottomOf="@+id/lastnameInput" />

    <ImageView
        android:id="@+id/dateImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/icons8_date_50"
        app:layout_constraintBottom_toBottomOf="@+id/birthText"
        app:layout_constraintEnd_toStartOf="@+id/birthText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/birthText" />

    <Button
        android:id="@+id/birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#009688"
        android:ems="10"
        android:hint="@string/datehint"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/birthText"
        app:layout_constraintStart_toEndOf="@+id/birthText"
        app:layout_constraintTop_toTopOf="@+id/birthText" />

    <Spinner
        android:id="@+id/gradeSpinner"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:entries="@array/educationOptions"
        app:layout_constraintStart_toEndOf="@+id/graduatedImage"
        app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <ImageView
        android:id="@+id/graduatedImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/icons8_graduation_cap_50"
        app:layout_constraintBottom_toBottomOf="@+id/gradeSpinner"
        app:layout_constraintEnd_toStartOf="@+id/gradeSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gradeSpinner" />

    <TextView
        android:id="@+id/birthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/birthdate"
        app:layout_constraintEnd_toStartOf="@+id/birthDate"
        app:layout_constraintStart_toEndOf="@+id/dateImage"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioButton" />

    <EditText
        android:id="@+id/lastnameInput"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType="textCapWords|textNoSuggestions"
        app:layout_constraintStart_toEndOf="@+id/profilepic2"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <ImageView
        android:id="@+id/profilepic2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/icons8_name_50"
        app:layout_constraintBottom_toBottomOf="@+id/lastnameInput"
        app:layout_constraintEnd_toStartOf="@+id/lastnameInput"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lastnameInput" />

    <ImageView
        android:id="@+id/profilepic1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/icons8_name_50"
        app:layout_constraintBottom_toBottomOf="@+id/nameInput"
        app:layout_constraintEnd_toStartOf="@+id/nameInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:imeOptions="actionNext"
        android:inputType="textCapWords|textNoSuggestions"
        app:layout_constraintStart_toEndOf="@+id/profilepic1"
        app:layout_constraintTop_toBottomOf="@+id/topText" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="13dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>